fixed overflow on mobile

--- a/src/components/Styling/Resume.css
+++ b/src/components/Styling/Resume.css
@@ -6,10 +6,17 @@
   max-width: 90vw !important;
   margin: auto !important;
   z-index: 1 !important;
+  margin-top: 5vh !important;
 }
 
 .container {
   overflow-y: auto;
   display: inline !important;
   z-index: 1;
+}
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
 }
